@@ -28,6 +28,7 @@ Upcoming release: BREAKING
 * Support added for Hardkernel ODROID-C2.
 * Added extended bootinfo header for device tree (SEL4_BOOTINFO_HEADER_FDT).
 * Support added for passing a device tree from the bootloader to the root task on ARM.
+* Add seL4_VSpaceBits, the size of the top level page table.
 
 ## Upgrade Notes
 ---
